--- a/activitylesson5table.html
+++ b/activitylesson5table.html
@@ -3,9 +3,9 @@
 <body topmargin=50>
 <center>
 <form>
-<p style="background-color:salmon;color:#696969;font-family:Times New roman;font-size:180%;text-align:center;width:50%;height:60%;">
+<p style="color:#696969;font-family:Times New roman;font-size:180%;text-align:center;width:50%;height:60%;">
 <br>
-<table border=2 align=center><caption><b>Personal Detail</b></caption>
+<table border=2 align=center style="border:5px double black;background-color:salmon;"><caption><b>Personal Detail</b></caption>
 <tr>
 <th align=left>Personal Detail:</th>
 <td>First Name:<input type=text name=fname>Last Name:<input type=text name=lname></td>
