--- a/KLYContactUs.html
+++ b/KLYContactUs.html
@@ -143,7 +143,7 @@ Tel: 6310 3711</p><br>
 
 <img onmouseenter="biglmg(this)" onmouseout="normallmg(this)"src="teacher1.jpg" height=300px width=400px border=2 align=center>
 <img onmouseenter="biglmg(this)" onmouseout="normallmg(this)"src="art1.jpg" height=300px width=400px border=2 align=left>
-<img onmouseenter="biglmg(this)" onmouseout="normallmg(this)"src="art3.jpg" height=300px width=400px border=2 align=center>
+<img onmouseenter="biglmg(this)" onmouseout="normallmg(this)"src="art3.jpg" height=300px width=400px border=2 align=left>
 <br><br><br><br><hr size="50" color="#191970">
 
 <p style="color:#800000; font-size:70%; font-family:Calibri;">
