--- a/studentportal.html
+++ b/studentportal.html
@@ -54,7 +54,7 @@ return false;
 <input type=reset value=Reset>
 <input type=submit value=Login>
 </form></center><br><br><br>
-<img onmouseenter="biglmg(this)" onmouseout="normallmg(this)"src="exam.jpg" height=300px width=400px border=2 align=right>
+<img onmouseenter="biglmg(this)" onmouseout="normallmg(this)"src="exam.jpg" height=300px width=400px border=2 align=left>
 <img onmouseenter="biglmg(this)" onmouseout="normallmg(this)"src="examresult.jpg" height=300px width=400px border=2 align=middle>
 <img onmouseenter="biglmg(this)" onmouseout="normallmg(this)"src="coursework.jpg" height=300px width=400px border=2 align=left>
 <br><br><br><hr size="50" color="#191970">
