--- a/PangRachaDCS2209227.html
+++ b/PangRachaDCS2209227.html
@@ -58,7 +58,7 @@ return true;
 
 
 }
-</script>/head>
+</script></head>
 
 <body topmargin=50 bgcolor=#FFE5CC><center>
 <form name=PangRachaDCS2209227 onsubmit="return validateForm()">
