--- a/staff page.html
+++ b/staff page.html
@@ -43,7 +43,7 @@
     </tr><tr></table>
 <br><br>
     <input type=reset value=Reset>
-    <input type=submit value=Submit></td></tr>
+    <input type=submit value=Login></td></tr>
     </form></center><br><br>
     
     </body></html>
