--- a/Pang_Racha_DCS2209227_gif015.html
+++ b/Pang_Racha_DCS2209227_gif015.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Computer Graphics</title>
+    <title>Computer Graphics Gif015</title>
     <script src="libraries/p5.min.js" type="text/javascript"></script>
     <script src="libraries/p5.sound.min.js" type="text/javascript"></script>
     
