--- a/Pang_Racha_DCS2209227_gif015.html
+++ b/Pang_Racha_DCS2209227_gif015.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>Computer Graphics Gif015</title>
-    <script src="libraries/p5.min.js" type="text/javascript"></script>
-    <script src="libraries/p5.sound.min.js" type="text/javascript"></script>
+    <script src="p5.min.js" type="text/javascript"></script>
+    <script src="p5.sound.min.js" type="text/javascript"></script>
     
     <script src="Pang_Racha_DCS2209227_gif015.js" type="text/javascript"></script>
 
