--- a/Pang_Racha_DCS2209227_gif015.html
+++ b/Pang_Racha_DCS2209227_gif015.html
@@ -6,7 +6,7 @@
     <script src="p5.min.js" type="text/javascript"></script>
     <script src="p5.sound.min.js" type="text/javascript"></script>
     
-    <script src="Pang_Racha_DCS2209227_gif015.js" type="text/javascript"></script>
+    <script src="rrachel24.github.io/Pang_Racha_DCS2209227_gif015.js" type="text/javascript"></script>
 
     <!-- <style> body { padding: 0; margin: 0; } canvas {vertical-align: top;} </style> -->
   </head>
