--- a/tutorial8.html
+++ b/tutorial8.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>Computer Graphics</title>
-    <script src="libraries/p5.min.js" type="text/javascript"></script> <!--to include library-->
-    <script src="libraries/p5.sound.min.js" type="text/javascript"></script>
+    <script src="p5.min.js" type="text/javascript"></script> <!--to include library-->
+    <script src="p5.sound.min.js" type="text/javascript"></script>
     
     <script src="tutorial8e.js" type="text/javascript"></script> <!--the script can be any name-->
 
